gestao biblioteca web

--- a/gestor-biblioteca-web/src/app/modules/cadastro/usuario/usuario.component.html
+++ b/gestor-biblioteca-web/src/app/modules/cadastro/usuario/usuario.component.html
@@ -25,7 +25,7 @@
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="form-field">
-                    <mat-label>Telefone</mat-label>
+                    <mat-label>Data cadastro</mat-label>
                     <input matInput type="date" formControlName="dataCadastro">
                     <mat-error *ngIf="dataCadastro?.errors">{{ dataCadastro.errors | erro }}</mat-error>
                 </mat-form-field>
