--- a/gestor-biblioteca-web/src/app/modules/pesquisa/pesquisa.component.html
+++ b/gestor-biblioteca-web/src/app/modules/pesquisa/pesquisa.component.html
@@ -3,17 +3,18 @@
     <ng-container *ngFor="let col of colunas" [matColumnDef]="col.nome">
         <th mat-header-cell *matHeaderCellDef>{{col.label}}</th>
         <td mat-cell *matCellDef="let element">
-            <ng-container *ngIf="col.tipo === 'DATA'; else phoneCell">
+            <ng-container *ngIf="col.tipo === 'DATA'">
                 {{ element[col.nome] | date: 'dd/MM/yyyy' }} 
             </ng-container>
-            <ng-template #phoneCell>
-                <ng-container *ngIf="col.tipo === 'TELEFONE'">
-                    {{ element[col.nome] | telefone }} 
-                </ng-container>
-                <ng-container *ngIf="col.tipo !== 'TELEFONE'">
-                    {{ element[col.nome] }}
-                </ng-container>
-            </ng-template>
+            <ng-container *ngIf="col.tipo === 'TELEFONE'">
+                {{ element[col.nome] | telefone }} 
+            </ng-container>
+            <ng-container *ngIf="col.tipo === 'CATEGORIA'">
+                {{ element[col.nome] | categoria }} 
+            </ng-container>
+            <ng-container *ngIf="!col.tipo || (col.tipo !== 'DATA' && col.tipo !== 'TELEFONE' && col.tipo !== 'CATEGORIA')">
+                {{ element[col.nome] }}
+            </ng-container>
         </td>
     </ng-container>
 
