gestao biblioteca web

--- a/gestor-biblioteca-web/src/app/modules/formulario/components/crud/crud.component.html
+++ b/gestor-biblioteca-web/src/app/modules/formulario/components/crud/crud.component.html
@@ -10,12 +10,15 @@
     <mat-card-content>
         <ng-content></ng-content>
     </mat-card-content>
-
-    <mat-card-actions fxLayoutAlign="end start" fxLayoutGap="16px">
+    <mat-card-actions class="card-extra">
+        <ng-content select="[extra-button]"></ng-content>
+    </mat-card-actions>
+    <mat-card-actions class="card-actions">
         <button type="button" (click)="voltarPesquisa()" mat-stroked-button>Voltar para a pesquisa</button>
         <button type="button" (click)="limpar()" color="primary" mat-stroked-button>Limpar</button>
         <button *ngIf="registroId" type="button" (click)="deletar()" color="error" mat-stroked-button>Deletar</button>
         <button type="submit" (click)="salvar()" color="primary" mat-raised-button>Salvar</button>
     </mat-card-actions>
+
 
 </mat-card>
