--- a/gestor-biblioteca-web/src/app/modules/pesquisa/pesquisa.component.html
+++ b/gestor-biblioteca-web/src/app/modules/pesquisa/pesquisa.component.html
@@ -4,15 +4,22 @@
         <th mat-header-cell *matHeaderCellDef>{{col.label}}</th>
         <td mat-cell *matCellDef="let element">
             <ng-container *ngIf="col.tipo === 'DATA'">
-                {{ element[col.nome] | date: 'dd/MM/yyyy' }} 
+                {{ element[col.nome] | date: 'dd/MM/yyyy' }}
             </ng-container>
             <ng-container *ngIf="col.tipo === 'TELEFONE'">
-                {{ element[col.nome] | telefone }} 
+                {{ element[col.nome] | telefone }}
             </ng-container>
             <ng-container *ngIf="col.tipo === 'CATEGORIA'">
-                {{ element[col.nome] | categoria }} 
+                {{ element[col.nome] | categoria }}
             </ng-container>
-            <ng-container *ngIf="!col.tipo || (col.tipo !== 'DATA' && col.tipo !== 'TELEFONE' && col.tipo !== 'CATEGORIA')">
+            <ng-container *ngIf="col.tipo === 'STATUS'">
+                {{ element[col.nome] | status }}
+            </ng-container>
+            <ng-container *ngIf="col.tipo === 'ENTIDADE'">
+                {{ element[col.nome] | entidade: col.colunaEntidade}}
+            </ng-container>
+            <ng-container *ngIf="!col.tipo || (col.tipo !== 'DATA' && col.tipo !== 'TELEFONE' && 
+            col.tipo !== 'CATEGORIA' && col.tipo !== 'STATUS' && col.tipo !== 'ENTIDADE')">
                 {{ element[col.nome] }}
             </ng-container>
         </td>
