--- a/gestor-biblioteca-web/src/app/modules/cadastro/google-book/google-books.component.html
+++ b/gestor-biblioteca-web/src/app/modules/cadastro/google-book/google-books.component.html
@@ -36,7 +36,7 @@
   </ng-container>
 
   <ng-container matColumnDef="action">
-    <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
+    <mat-header-cell *matHeaderCellDef> Ação </mat-header-cell>
     <mat-cell *matCellDef="let book">
       <button mat-raised-button color="primary" (click)="onSelectBook(book)">
         Incluir livro
